# bin2cell

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
bin2cell/: __init__.py  bin2cell.py
docs/: conf.py  contents.rst  index.rst  requirements.txt  segmentation.rst
docs/notebooks/: destripe_celltypist.ipynb
notebooks/: demo.ipynb
