[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "bin2cell"
authors = [{name = "Krzysztof Polanski, Nadav Yayon", email = "kp9@sanger.ac.uk"}]
license = {file = "LICENSE"}
readme = {file = "README.md", content-type="text/markdown"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "numpy < 2",
    "scanpy",
    "stardist",
    "opencv-python",
    "fastparquet"
]
requires-python = ">=3.7"

[project.urls]
Home = "https://github.com/Teichlab/bin2cell"
Documentation = "https://bin2cell.readthedocs.io/en/latest/"
